--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "swagger-ui-express": "^4.0.7",
+    "yamljs": "^0.3.0"
   }
 }
