--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.3.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
