--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^3.0.6",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-openapi-validator": "^1.4.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
