--- a/api/v1/spec.yaml
+++ b/api/v1/spec.yaml
@@ -20,8 +20,7 @@ tags:
   - name: reservation
 
 servers:
-  # - url: https://localhost/api/v1
-  - url: http://localhost:3000/api/v1
+  - url: https://festival-hypermedia.herokuapp.com/api/v1
 
   
 paths:
